--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-jdbc')
     compile('org.springframework.boot:spring-boot-starter-jersey')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.mongodb:mongodb-driver:3.1.1')
     testCompile('org.springframework.boot:spring-boot-starter-test') 
 }
 
